--- a/tox.ini
+++ b/tox.ini
@@ -32,10 +32,10 @@ commands=
 [testenv:checks]
 envdir = {toxworkdir}/checks
 commands =
-    flake8 src
-    isort src
-    black src
-    mypy src
+    black {posargs:tests src}
+    isort {posargs:tests src}
+    flake8 {posargs:tests src}
+    mypy {posargs:tests src}
     {posargs:mypy src}
 
 # Flake8 settings for code linting
