fixing-build-issues

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 min_version = 4
 
 # List of environments to be run by default
-envlist = run, checks, py310
+envlist = run, checks, py38, py39, py310
 
 # Flag to skip packaging operations as this is not a Python package
 skipsdist = True
